2009-02-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/builder.hg: get_widget_derived():
	* gtk/src/builder.ccg: get_widget_checked(): Take a reference on 
	the widget received from gtk_builder_get_object() because it does 
	not give one.

2009-01-01  Armin Burgmeier  <armin@openismus.com>

	* gtk/src/printer.ccg (SignalProxy_Custom_gtk_callback): Take a new
	reference on the passed printer object, so that we don't unref it at
	the end of the function (Tor Krill).

2008-07-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooser.hg: get_preview_widget(): Move the const 
	overload after the non-const one, because gmmproc otherwise seems to 
	make both just calls to the non-const one. We really need to stop 
	gmmproc from doing that, first figuring out why.
	Luckily, I don't think we put them in this order very often.
	Bug #543288 (Jens Georg)

2.12.7:

2008-04-02  Svetlozar Argirov  <zarrro@gmail.com>

	* gtk/src/treepath.hg: TreePath(In pbegin, In pend) constructor:
	Initialize gobject_ to avoid a crash.
	Bug #500439.

2008-04-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/uimanager.ccg: add_ui_from_string(): Pass the number of 
	bytes, not the number of characters, so this works with non-ASCII 
	in the markup.

2.12.6:

2008-03-28  Tim Retout  <tim@retout.co.uk>

	* pango/src/attributes.hg (gobj): Return 'const PangoAttribute*'
	rather than 'PangoAttribute* const'.  Fixes g++ 4.3 warning.
	Bug #524874.

2008-03-21  Deng Xiyue <manphiz@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Fix gtkmm name in Debian/Ubuntu:
	libgtkmm2.4-dev -> libgtkmm-2.4-dev.

2008-03-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.ccg: remove_callback(): When just calling the C 
	callback, because the C++ object has already been destroyed, don't 
	even call the C callback if the GType is exactly GtkContainer. This 
	avoids a useless warning from GTK+ about an unimplemented remove() 