@@ -4,8 +4,8 @@
 sublib_name = gtkmm
 sublib_namespace = Gtk
 sublib_parentdir = gtkmm
-files_defs = gtk.defs gtk_methods.defs gtk_signals.defs gtk_vfuncs.defs gtk_other.defs gtk_enums.defs \
-             gtk_docs.xml gtk_docs_override.xml
+files_defs = gtk.defs gtk_methods.defs gtk_methods_maemo.defs gtk_signals.defs \
+	gtk_vfuncs.defs gtk_other.defs gtk_enums.defs gtk_enums_maemo.defs \
+	gtk_docs.xml gtk_docs_override.xml
 
 include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment
-
