@@ -1,6 +1,7 @@
 (include gtk_methods.defs)
+(include gtk_methods_maemo.defs)
 (include gtk_signals.defs)
 (include gtk_vfuncs.defs)
 (include gtk_enums.defs)
+(include gtk_enums_maemo.defs)
 (include gtk_other.defs)
-
