@@ -1,0 +1,50 @@
+; hand-edited to fix enum.pl parsing error
+(define-flags-extended GtkInputMode
+  (in-module "Hildon")
+  (c-name "HildonGtkInputMode")
+  (values
+    '("alpha" "HILDON_GTK_INPUT_MODE_ALPHA" "1 << 0")
+    '("numeric" "HILDON_GTK_INPUT_MODE_NUMERIC" "1 << 1")
+    '("special" "HILDON_GTK_INPUT_MODE_SPECIAL" "1 << 2")
+    '("hexa" "HILDON_GTK_INPUT_MODE_HEXA" "1 << 3")
+    '("tele" "HILDON_GTK_INPUT_MODE_TELE" "1 << 4")
+    '("full" "HILDON_GTK_INPUT_MODE_FULL" "0x07")
+    '("multiline" "HILDON_GTK_INPUT_MODE_MULTILINE" "1 << 28")
+    '("invisible" "HILDON_GTK_INPUT_MODE_INVISIBLE" "1 << 29")
+    '("autocap" "HILDON_GTK_INPUT_MODE_AUTOCAP" "1 << 30")
+    '("dictionary" "HILDON_GTK_INPUT_MODE_DICTIONARY" "1 << 31")
+  )
+)
+
+(define-enum-extended Mode
+  (in-module "Hildon")
+  (c-name "HildonMode")
+  (values
+    '("diablo" "HILDON_DIABLO" "0")
+    '("fremantle" "HILDON_FREMANTLE" "1")
+  )
+)
+
+(define-enum-extended UIMode
+  (in-module "Hildon")
+  (c-name "HildonUIMode")
+  (values
+    '("normal" "HILDON_UI_MODE_NORMAL" "0")
+    '("edit" "HILDON_UI_MODE_EDIT" "1")
+  )
+)
+
+; hand-edited to fix enum.pl parsing errors, and also for sanity
+(define-flags-extended SizeType
+  (in-module "Hildon")
+  (c-name "HildonSizeType")
+  (values
+    '("auto-width" "HILDON_SIZE_AUTO_WIDTH" "0")
+    '("halfscreen-width" "HILDON_SIZE_HALFSCREEN_WIDTH" "1")
+    '("fullscreen-width" "HILDON_SIZE_FULLSCREEN_WIDTH" "2")
+    '("auto-height" "HILDON_SIZE_AUTO_HEIGHT" "0")
+    '("finger-height" "HILDON_SIZE_FINGER_HEIGHT" "4")
+    '("thumb-height" "HILDON_SIZE_THUMB_HEIGHT" "8")
+    '("auto" "HILDON_SIZE_AUTO" "0")
+  )
+)
