@@ -1,3 +1,11 @@
+2009-03-06  Daniel Elstner  <danielk@openismus.com>
+
+	* gtk/src/gtk_enums_maemo.defs: New separate defs file for the
+	changes in the Maemo fork of GTK+.
+	* gtk/src/gtk_methods_maemo.defs: Likewise.
+	* gtk/src/gtk.defs: Include the Maemo defs files.
+	* gtk/src/Makefile.am (files_defs): Add the new defs files.
+
 2009-02-22  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/builder.hg: get_widget_derived():
